--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     <script src="index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body></body>
+  <body>
+    <section id="input">
+      <input
+        type="text"
+        id="temp"
+        placeholder="Degrees in fahrenheit here"
+        required
+      />
+      <button type="submit">Submit</button>
+    </section>
+  </body>
 </html>
