removed html button, added a js prompt.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,5 @@
     <script src="index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
-    <section id="input">
-      <input
-        type="text"
-        id="temp"
-        placeholder="Degrees in fahrenheit here"
-        required
-      />
-      <button type="submit">Submit</button>
-    </section>
-  </body>
+  <body></body>
 </html>
